--- a/urbandictionerybackend/.eslintrc.json
+++ b/urbandictionerybackend/.eslintrc.json
@@ -15,6 +15,8 @@
         "max-len": ["error", { "code": 120, "tabWidth": 2, "ignoreComments": true, "ignoreUrls": true }],
         "require-jsdoc": ["error", { "require": { "FunctionDeclaration": false, "MethodDefinition": false, "ClassDeclaration": false } }],
         "new-cap": ["error", { "capIsNew": false }],
-        "guard-for-in": "off"
+        "guard-for-in": "off",
+        "@typescript-eslint/strict-boolean-expressions": 0,
+        "@typescript-eslint/restrict-plus-operands": "off"
     }
 }
