--- a/urbandictionerybackend/package.json
+++ b/urbandictionerybackend/package.json
@@ -17,8 +17,10 @@
    },
    "dependencies": {
       "body-parser": "^1.19.1",
+      "class-validator": "^0.13.2",
       "express": "^4.17.2",
       "reflect-metadata": "^0.1.13",
+      "http-error": "^0.0.6",
       "sqlite3": "^5.0.2",
       "typeorm": "0.3.10"
    },
