--- a/urbandictionaryfrontend/package.json
+++ b/urbandictionaryfrontend/package.json
@@ -6,12 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-	"json": "json-server --watch db.json --port 3006"
+    "json": "json-server --watch db.json --port 3006"
   },
   "dependencies": {
     "bootstrap-vue": "^2.23.1",
     "bootswatch": "^4.6.1",
     "core-js": "^3.8.3",
+    "particles-bg-vue": "^1.3.5",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
